[gd_scene load_steps=4 format=3 uid="uid://fsyy7oc6ebjw"]

[ext_resource type="Script" path="res://settings.gd" id="1_b073x"]
[ext_resource type="AudioStream" uid="uid://h5e7iufar4wd" path="res://Three Red Hearts - Box Jump.ogg" id="2_013qa"]
[ext_resource type="Texture2D" uid="uid://nps6mqq1l5yn" path="res://assest/Mockup2.png" id="2_bf03e"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b073x")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(640, 364)
scale = Vector2(2.47656, 2.78125)
texture = ExtResource("2_bf03e")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 152.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Mute"

[node name="volume" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 5.0

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
selected = 2
item_count = 3
popup/item_0/text = "1920x1080"
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_013qa")
volume_db = -20.0
autoplay = true

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 1174.0
offset_top = 118.0
offset_right = 1281.0
offset_bottom = 149.0
text = "الرجوع"

[connection signal="toggled" from="MarginContainer/VBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/volume" to="." method="_on_volume_value_changed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
